--- a/.github/ISSUE_TEMPLATE/attach.yml
+++ b/.github/ISSUE_TEMPLATE/attach.yml
@@ -8,7 +8,7 @@ assignees:
 body: 
   - type: markdown
     attributes:
-      value: >
+      value: |
         If you have any questions about this issue template, contact:
         * [nattadasu](https://myanimelist.net/mymessages.php?go=send&toname=nattadasu) as GFX Admin,
         * [Annie_Law](https://myanimelist.net/mymessages.php?go=send&toname=Annie_Law) as GFX Deputy, or
