Modify requirement for takedown notice template

--- a/.github/ISSUE_TEMPLATE/takedownNotice.yml
+++ b/.github/ISSUE_TEMPLATE/takedownNotice.yml
@@ -31,6 +31,8 @@ body:
       options:
         - I am on behalf of an organization
         - I am the sole owner of the work
+    validations:
+      required: true
   - type: input
     id: orgName
     attributes:
